fixed icons and spacing
tracks internal commit fa344ad71da7ab07294abb6caf919edbdb1be5e7

--- a/themes/slashcode/htdocs/print.css
+++ b/themes/slashcode/htdocs/print.css
@@ -1,15 +1,15 @@
 body
 {
-	background: #fff;
+        background: #fff;
 }
-#ostgnavbar, #topnav h4, #topnav ul, #links, #slashboxes, #comments, .commentwrap, .btmnav, .search, #jump, .article .details img, #adminmenu, #footer table
+#ostgnavbar, #topnav h4, #topnav ul, #links, #slashboxes, #comments, .commentwrap, .btmnav, .search, #jump, .article .details img, #adminmenu, #footer table, div.storylinks, div.storylinks ul, div.storylinks div
 {
-	display: none;
+        display: none;
 }
 /* Header */
 #slogan h2
 {
-	color: #000;
+        color: #000;
 }
 .topic
 {
@@ -29,24 +29,23 @@ border: none;
 }
 
 /* General */
-.generaltitle, .article, .journalgeneric
+.article, .journalgeneric
 {
-	background: transparent;
-margin: 0 0 3em 0;
+        background: transparent;
+        margin: 0 0 2em 0;
 }
 
 .generaltitle div.title, .article div.title, .journalgeneric div.title
 {
-	background: transparent;
-	border-bottom: 1px solid #000;
+        background: transparent;
+        border-bottom: 1px solid #000;
 }
 
 .generaltitle h3, .article h3, .journalgeneric h3
 {
-	background: transparent;
-	color: #000;
-margin: 0;
-padding: 0;
+        background: transparent;
+        color: #000;
+        margin: 0;
 }
 
 .generaltitle h3 a, .article h3 a, .generaltitle h3 a:visited, .article h3 a:visited, .journalgeneric h3 a, .journalgeneric h3 a:visited
@@ -57,21 +56,17 @@ padding: 0;
 .generalbody, .article .details, .journalgeneric .details
 {
         border: none;
-        background: transparent; 
-font-size: 75.5%;
-	margin: .2em 0 .5em 0;
+        background: transparent;
+        font-size: 75.5%;
+        margin: .2em 0 .5em 0;
 }
 
 .article div.body, .journalgeneric div.body
 {
         border: 1px solid #fff;
-        background: transparent; 
+        background: transparent;
 }
 
-div.storylinks, div.storylinks ul, div.storylinks div
-{
-       display: none;
-}
-#footer {
-	text-align: center;
+#footer, #footer .rightcontent {
+        text-align: center;
 }
